Armorer Func applied and working

--- a/style.css
+++ b/style.css
@@ -128,3 +128,10 @@ details ul {
   margin-left: 6px;
   font-weight: bold;
 }
+.advantage {
+  color: #6fe36f;
+  font-size: 0.75rem;
+  margin-left: 6px;
+  font-weight: bold;
+}
+
